tests/parser/return-statement-outside-function.stderr
error: 'return' outside function
 --> $DIR/return-statement-outside-function.lox:1:11
  |
1 | fn f() {} return;
  |           ^^^^^^
